--- a/Nosotros.html
+++ b/Nosotros.html
@@ -1,84 +1,102 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-	<title> Sobre Nosotros</title>
-	<meta charset="utf-8">
+
+<title>IMAGENCIES – Connecting brands with the digital world</title>	<meta charset="utf-8">
 	<meta name="autor" content="#RHZY!">
 	<meta name="keywords" content="agencia, marketing">
 	<meta name="description" content="marketing digital">
 	<!---css---->	
-	<link rel="stylesheet" href="css.css">
+	<link rel="stylesheet" href="Style/css.css">
 	<!---icon ---->
-	 <link rel="icon"href="img/logo1.png">
-		
 	 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-		
-
-
-
+	 <link rel="icon"href="img/logo1.png">
+	
 	 <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-	 <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+	 <meta name="viewport" content="width=device-width,initial-scale=1.0">
+
 </head>
 <body>
-<header class="head-nosotros">
-	<div class="contenedor">
+<header class="head">
+			
+	<section class="top">
+	<article>	
+		<div class="conta">
+			<a id="numero" href="https://wa.me/+584243005971"> <i class="fa fa-mobile" aria-hidden="true"></i>+58 424-300-5971 </a>
 
+			<a href="mailto:Info@imagencie.com"><i class="fa fa-envelope-o" aria-hidden="true"></i>Info@imagencie.com
+</a>
+
+		<a href=""><i class="fa fa-globe" aria-hidden="true"></i> Venezuela
+		</a>
+
+		</div>	
+<div class="REDES-S"> 
+		<a href="https://www.facebook.com/IMAgencies/"><i class="fa fa-facebook"></i></a>
+		<a href="https://www.linkedin.com/company/im-agencies/?originalSubdomain=mx"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
+		<a href="https://www.instagram.com/imagencies/"> <i class="fa fa-instagram"></i></a>
+		<a href=""><i class="fa fa-whatsapp"></i></a>
+</div>
+	</article>
+	</section>
+		<i id="boton" class="fa fa-bars"></i></div></label>
+
+	<div class="contenedor">
 
 			<div class="menu">
 			<div class="logo">
 			<a aria-label="agencia de marketing" href="https://imagencies.netlify.app">
 			 <img src="img/logo1.png" alt="logo-im-agencies"> 
-			<h1>Agencies</h1></a>
-		
+			<h1>Agencies. </h1></a>
 			</div>
 			<div>
 				<ul>
-
-					<a href="https://imagencies.netlify.app"
+					<a href="index.html"
 					aria-label="agencia de marketing">  Inicio </a>
-					<a href="nosotros.html"> Nosotros </a>
-					<a href="Nosotros.html#servicos">Servicios </a>
-					<a href="Nosotros.html">Contacto </a>
-					<a id="numero" href="https://wa.me/+584243005971">+58 424-300-5971 </a>
+					<a href="Nosotros.html" 	id="Inicio"> Nosotros </a>
+					<a href="Servicios.html">Servicios </a>
+					<a href="Contacto.html">Contacto </a>
+					
 
 				</ul>
 			</div>
-			</div>
-		<label for="btn-menu">
-		<i id="boton" class="fa fa-bars"></i></div></label>
-
+			</div>		
+			<label for="btn-menu">		<i id="boton" class="fa fa-bars"></i></div></label>
 		<DIV>
+			
 		<input type="checkbox" id="btn-menu">	
 		<div class="menu-desplegable">
+		
+		<a href="https://imagencies.netlify.app">
+		<img id="flex" src="img/logo1.png" alt="logo-im-agencies"> </a>	
 			
 			<nav class="enlaces">
-			<a href="https://imagencies.netlify.app">Inicio </a>
-			<a href="nosotros.html">Nosotros </a>
-			<a href="Nosotros.html#servicos">Servicios </a>
-			<a href="contacto.html">Contacto </a>
-			</nav>
-			
-			
+			<a href="index.html">Inicio </a>
+			<a href="Nosotros.html">Nosotros </a>
+			<a href="Servicios.html">Servicios </a>
+			<a href="Contacto.html">Contacto </a>
+			</nav>			
 		<label for="btn-menu" >
 		<i id="boton" class="fa fa-times"></i></div></label>
 		
 		</div>
 		</DIV>
 
-		
-		<div class="flex-nosotros">	
-
-		<article class="mensaje"  data-aos="zoom-in-right">
-		
-		<span>Conoce nuestra Agencia</span>
-		<h2>Sobre Nosotros</h2>
-		<p>
-Somos Im Agencies, una agencia de marketing digital ubicada en Turmero estado Aragua, nos dedicamos a impulsar el crecimiento de negocios mediante estrategias de contenidos creativos y de impacto para los consumidores.
-</p>
-
-</article>
-
+		<div class="flex">	
+		<article class="mensaje"  data-aos="fade-down">
+		<h4>
+		We Build the <b>future.</b>
+		</h4>
+		<h3>Contacto</h3>
+		<a href="nosotros.html">
+		<b> +8</b> Años en el mercado!
+		</a>
+		</article>
+		<!---
+		<article>
+			<img src="img/social.png">
+		</article>---->
 	</div>
 </header>
 
@@ -87,183 +105,215 @@ Somos Im Agencies, una agencia de marketing digital ubicada en Turmero estado Ar
     	<i class="fa fa-whatsapp"></i> </a>
   	</div>
 
-<section class="somos">
-	<article>
 
-<div class="quienes-img">
 
-</div>
 
-<div class="quienes-somos">
-<span>A que nos dedicamos</span>	
-<p class="buenos"><b>Buenos</b> diseños
-<br>
-<b>Buenos</b> negocios</p>
 
-<h4>Sabemos que los buenos diseños significan buenos negocios.</h4>
-<p>
-	Trabajamos en estrecha colaboración con nuestros clientes para asegurarnos de que su presencia digital transmita el mensaje correcto y cautiven a su público objetivo.
-</div>
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+ en 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+l 
+tu 
+s 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+<article class="cite">
+	<section class="lo">
+	
+	<h3> "La buena publicidad no sólo circula información,<br>
+	penetra en la mente pública, con deseos y creencias"</h3>
+
+	<img src="img/Cpgw.png">
+	
+	<p>Leo Burnett</p>
+
+</section>
 
 </article>
-
-
-</section>
-
-<section>
-	<img src="">
-</section>
-
-</div>
-
-
-<section class="servicos-nosotros">
-		<div class="servicos-texto">
-		<span id="servicos">Servicios</span>	
-		<h4> Las mejores soluciones para ti</h4>
-		<p>Ofrecemos servicios de diseño y desarrollo a startups y pequeñas empresas que buscan un socio en el ámbito digital. Nuestro enfoque se centra en generar comunicación efectiva y cubrir los requisitos necesarios. Trabajamos con usted, no para usted, para asegurarnos de obtener los mejores resultados.</p>
-	</div>
-
-		<div class="servicos-nosotros-img">
-		<div>
-		<figure><img src="img/servicio1.jpg">
-				<div class="capa">
-					<h4>Social Media Marketing.</h4>
-<p>
-Potencia tu estrategia en Redes Sociales manteniendo una conexión sólida con tus clientes.</p>
-				</div>
-			</figure>
-
-
-		<figure><img src="img/servicio2.jpg">
-				<div class="capa">
-				</div>
-			</figure>
-			
-
-		<figure><img src="img/servicio3.jpg">
-				<div class="capa">
-					<p><b>					Asesorias.</b>
-						<br>
-				<br>Analizamos las oportunidades de crecimiento de tu negocio y trabajamos en fortalecer tus debilidades.</p>
-				</div>
-			</figure>		
-		
-		</div>
-		<div>
-		<figure class="up"><img src="img/servicio6.png">
-			<div class="capa">
-				<p><b>Desarrollo web.</b>
-					<br><br>
-Creamos sitios web adaptativos diseñados para una experiencia óptima en cualquier dispositivo.</p>
-				</div>
-			</figure>
-
-
-		<figure><img src="img/servicio4.jpg">
-				<div class="capa">
-				<p>dkaldklakdlakdSDkls/p>
-				</div>
-			</figure>
-			
-		
-		<figure><img src="img/servicio5.jpg">
-				<div class="capa">
-			<p><b>Diseño Grafico</b>
-						<br>		
-Creamos proyectos a medida, diseñados de forma personalizada según tus necesidades y objetivos.</p>
-				</div>
-			</figure>		
-		</div>
-		</div>
-
-	
-</section>
-
-
-<article class="last">
-	<div>
-		
-<span>A que nos dedicamos</span>	
-<p class="buenos"><b>Buenos</b> diseños
-	</div>
-
-	<section class="last-video">
-
-
-		<figure>
-
-      <video id="videoClase"
-            controls=" "  
-      autoplay loop poster muted ="portada.jpg">
-  <source src="img/video4.mp4" type="video/mp4"></source>
-			<p></p>
-		</figure>
-
-		<figure>
-      <video id="videoClase" 
-      autoplay loop poster muted ="portada.jpg">
-  <source src="img/video3.mp4" type="video/mp4"></source>
-			<p></p>
-		</figure>
-
-
-		<figure>
-
-      <video id="videoClase"
-      autoplay loop poster muted ="portada.jpg">
-  <source src="img/video2.mp4" type="video/mp4"></source>
-
-			<p></p>
-		</figure>
-
-
-		<figure>
-
-      <video id="videoClase" 
-      controls=" " 
-      autoplay loop poster muted  ="portada.jpg">
-  <source src="img/video1.mp4" type="video/mp4"></source>
-  Tu navegador no soporta HTML5 video.
-			<p></p>
-		</figure>
-
-	</section>
-
-</article>
-
-
-			
-<section class="con2" data-aos="flip-right">
-	<div class="cont">
-		<h5>¡Aumenta tus ventas!</h5>
-	</div>
-	<p>
-	Comunícate con nosotros para comenzar a diseñar una estrategia digital orientada a impulsar el crecimiento de tu marca en la web</p>
-	
-	
-	<div class="contas">
-	<i  class="fa fa-whatsapp"></i>
-		<a  href="https://wa.me/+584243345211">
-	+58 424-334-5211 </a>
-</div>
-</section>
-
-
 
 
 
 <footer>
 <section class="footer-agencie">
-<div class="footer-logo">
+	<div class="footer-logo">
 		<h6>IM Agencies!</h6>
 		<p>Contamos con profesionales altamente capacitados para brindar soluciones a las inquietudes de tu empresa.</p>
 		<ul >
 		<a href="https://www.facebook.com/IMAgencies/"><i class="fa fa-facebook"></i></a>
 		<a href="https://www.linkedin.com/company/im-agencies/?originalSubdomain=mx"><i class="fa fa-linkedin-square" aria-hidden="true"></i></a>
 		<a href="https://www.instagram.com/imagencies/"> <i class="fa fa-instagram"></i></a>
-		<i class="fa fa-whatsapp"></i>
+		<a href=""> <i class="fa fa-whatsapp"></i>                       </a>
+		
+
+
 		</ul>
 	</div>
 <div class="footer-servicios">
@@ -283,17 +333,16 @@ Creamos proyectos a medida, diseñados de forma personalizada según tus necesid
 </section>
 	<div class="footer-contacto">
 
-		<ul>
-			<li>
+		<ul >
+			<li class="ubi">
 			<i class="fa fa-globe" aria-hidden="true"></i>
 			
 			
-			<a href="https://www.google.com/search?q=mapa+turmero&client=opera-gx&hs=0xH&sca_esv=568251480&sxsrf=AM9HkKkqwfQCaICyG1lh1-vEN7GmB1PmtA%3A1695676797191&ei=ffkRZcuTC66q5NoP8PGD8Ag&ved=0ahUKEwiLxpmp2MaBAxUuFVkFHfD4AI4Q4dUDCA8&uact=5&oq=mapa+turmero&gs_lp=Egxnd3Mtd2l6LXNlcnAiDG1hcGEgdHVybWVybzIKEAAYRxjWBBiwAzIKEAAYRxjWBBiwAzIKEAAYRxjWBBiwAzIKEAAYRxjWBBiwA0j5F1DYCFjXFnABeAGQAQCYAZgFoAGYBaoBAzUtMbgBA8gBAPgBAeIDBBgAIEGIBgGQBgQ&sclient=gws-wiz-serp#">Venezuela</a>
-			<a href="https://maps.app.goo.gl/Fr4o11xN29itobKw6">Panama</a>
-			<br>
-			<a href="https://maps.app.goo.gl/tt2sLnA8nsByts4U9">Puerto Rico</a>				
+			<a  href="https://www.google.com/search?q=mapa+turmero&client=opera-gx&hs=0xH&sca_esv=568251480&sxsrf=AM9HkKkqwfQCaICyG1lh1-vEN7GmB1PmtA%3A1695676797191&ei=ffkRZcuTC66q5NoP8PGD8Ag&ved=0ahUKEwiLxpmp2MaBAxUuFVkFHfD4AI4Q4dUDCA8&uact=5&oq=mapa+turmero&gs_lp=Egxnd3Mtd2l6LXNlcnAiDG1hcGEgdHVybWVybzIKEAAYRxjWBBiwAzIKEAAYRxjWBBiwAzIKEAAYRxjWBBiwAzIKEAAYRxjWBBiwA0j5F1DYCFjXFnABeAGQAQCYAZgFoAGYBaoBAzUtMbgBA8gBAPgBAeIDBBgAIEGIBgGQBgQ&sclient=gws-wiz-serp#">Venezuela</a>
+			<a  href="https://maps.app.goo.gl/Fr4o11xN29itobKw6">Panama</a>
+			
+			<a   href="https://maps.app.goo.gl/tt2sLnA8nsByts4U9">Puerto Rico</a>				
 			</li>
-
 
 			<li>
 		
@@ -317,10 +366,9 @@ Creamos proyectos a medida, diseñados de forma personalizada según tus necesid
 	<div class="grupo2-1">
 		
 
-	 	<a href="https://suburbiodeideas.netlify.app"> &copy; 2023 Suburbio de ideas
+	 	<a href="https://suburbiodeideas.netlify.app"> &copy; 2025 - Suburbio de ideas.
 	 	</a>
-	 	<p>Disclaimer: </p>
-	 	<p>La propiedad inteletual de los sitos usados para el portafolio solo es para inspriracion , los derechos de imagen pertenecen a las entidades  </p>
+	 	<p>Disclaimer : : Los derecho de imagen pertenecen a las entidades, Su uso solo es como complemento a mis practicas.  </p>
 	 </div>
 
 	</div>
