--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@ Descubre cómo podemos impulsar tu negocio.
 		</ul>
 	</div>
 <div class="footer-servicios">
-	<h6>Servicios</h6>
+	<h6> <u>Servicios</u></h6>
 	<ol>
 		<li>Social Marketing</li>
 		<li>Desarrollo web</li>
